# lurker

./: .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel  README.md  go.mod  go.sum  sec-ideas.md
.github/workflows/: ci.yaml
cmd/issue-watcher/: main.go
cmd/lurker/: BUILD.bazel  main.go
pkg/github/: BUILD.bazel  client.go  client_test.go  issues.go  issues_test.go  pulls.go  pulls_test.go  ratelimit.go  ratelimit_test.go
pkg/tui/: BUILD.bazel  keys.go  model.go  pty.go  styles.go  view.go
pkg/watcher/: BUILD.bazel  claude.go  claude_test.go  config.go  issue.go  issue_test.go  watcher.go  watcher_test.go
